Bug 33719 - ums: fix build against xserver >= 1.10 breaks kms build of xserver git (not on tip)
Summary: ums: fix build against xserver >= 1.10 breaks kms build of xserver git (not o...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-30 05:49 UTC by Andy Furniss
Modified: 2011-01-31 12:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Andy Furniss 2011-01-30 05:49:41 UTC
Maybe there is no way round this - but just in case.

I have xserver git but it is reset to a commit someway from tip and 
ums: fix build against xserver >= 1.10 
breaks the build for me.

The reason I reset may have gone away now anyway, I haven't had time to test yet.
(It was so I could test xvmc which had xorg state tracker in its build instructions which at the time wouldn't build with tip xserver).
Comment 1 Michel Dänzer 2011-01-31 03:38:47 UTC
commit 66eb81b62e5ae8e1d7bd44ed8a179e5ec1ca69af
Author: Michel Dänzer <daenzer@vmware.com>
Date:   Mon Jan 31 12:26:20 2011 +0100

    UMS: Slightly improve xserver version check.
    
    This will ensure the xserver definitions necessary to compile the new code are
    there. xf86CrtcSetMode will be unresolved at runtime with a few xserver
    commits, but I'm afraid this is the best we can do.
Comment 2 Andy Furniss 2011-01-31 12:17:48 UTC
(In reply to comment #1)
> commit 66eb81b62e5ae8e1d7bd44ed8a179e5ec1ca69af
> Author: Michel Dänzer <daenzer@vmware.com>
> Date:   Mon Jan 31 12:26:20 2011 +0100
> 
>     UMS: Slightly improve xserver version check.
> 
>     This will ensure the xserver definitions necessary to compile the new code
> are
>     there. xf86CrtcSetMode will be unresolved at runtime with a few xserver
>     commits, but I'm afraid this is the best we can do.

Thanks, that fixes my build.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.