UMS: Slightly improve xserver version check.

This will ensure the xserver definitions necessary to compile the new code are
there. xf86CrtcSetMode will be unresolved at runtime with a few xserver
commits, but I'm afraid this is the best we can do.

See https://bugs.freedesktop.org/show_bug.cgi?id=33719 .